# TimeTable-Generator

./: .gitignore  LICENSE  README.md  changelog.md  docker-compose.yml
backend/: .dockerignore  12to24.py  Dockerfile  config.py  database.py  main.py  models.py  oauth.py  oauth2.py  pyproject.toml  requirements.txt
backend/Generations/: School_timetable.py  utils.py
backend/routes/: Add_Classes.py  Add_Subjects.py  Add_Teachers.py  Assignment.py  Auth.py  Classes.py  Entries.py  Generate_Table.py  Login.py  Subjects.py  Teachers.py  TimeTable.py  add_classes.py  add_teachers.py  login.py
frontend/: index.html  package-lock.json  package.json  plan.txt  todo.txt  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/Context/: AuthProvider.jsx  ClassesProvider.jsx  GlobalDataProvider.jsx  SubjectProvider.jsx  TeacherProvider.jsx
frontend/src/Pages/app_main/classes/: Classes.jsx  Classes.module.css
frontend/src/Pages/app_main/dashboard/: Dashboard.jsx  Dashboard.module.css
frontend/src/Pages/app_main/subjects/: Subjects.jsx  Subjects.module.css
frontend/src/Pages/app_main/teachers/: Teachers.jsx  teacher.module.css
frontend/src/Pages/error/: Error404.jsx  Error404.module.css
frontend/src/Pages/landing_page/: LandingPage.jsx  LandingPage.module.css
frontend/src/Pages/login_signup/: Forgot.module.css  ForgotPass.jsx  Login.jsx  Login.module.css  Register.jsx
frontend/src/Utils/Routing/: ProtectedRoutes.jsx  PublicRoutes.jsx  RouteManager.jsx
public/: index.html  login.html
src/styles/: icons.json  index.css
(+65 files in other folders)
