[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "jwt>=1.4.0",
    "ortools>=9.14.6206",
    "psycopg2",
    "psycopg2-binary",
    "pwdlib>=0.3.0",
    "sqlmodel>=0.0.27",
]
